:sparkles: add asdf-helper ASDF plugin

--- a/chezmoi/.chezmoiexternal.toml.tmpl
+++ b/chezmoi/.chezmoiexternal.toml.tmpl
@@ -5,6 +5,11 @@
 type = "git-repo"
 url = "https://github.com/asdf-vm/asdf.git"
 
+[".asdf/plugins/asdf-helper"]
+type = "git-repo"
+exact = true
+url = "https://github.com/ngyewch/asdf-helper-plugin.git"
+
 [".asdf/plugins/zoxide"]
 type = "git-repo"
 exact = true
