--- a/chezmoi/.chezmoi.yaml.tmpl
+++ b/chezmoi/.chezmoi.yaml.tmpl
@@ -9,7 +9,7 @@ git:
   commitMessageTemplate: |
     :floppy_disk: update dotfiles
 
-    {{ "{{" }}- range .Ordinary -}}
+    {{ "{{" }} range .Ordinary -}}
     {{ "{{" }} if and (eq .X 'A') (eq .Y '.') -}}- Add {{ "{{" }} .Path | targetRelPath }}
     {{ "{{" }} else if and (eq .X 'D') (eq .Y '.') -}}- Remove {{ "{{" }} .Path | targetRelPath }}
     {{ "{{" }} else if and (eq .X 'M') (eq .Y '.') -}}- Update {{ "{{" }} .Path | targetRelPath }}
@@ -17,7 +17,7 @@ git:
     {{ "{{" }} end }}
     {{ "{{" }}- end -}}
 
-    {{ "{{" }}- range .RenamedOrCopied -}}
+    {{ "{{" }} range .RenamedOrCopied -}}
     {{ "{{" }} if and (eq .X 'R') (eq .Y '.') }}- Change attributes of {{ "{{" }} .Path | targetRelPath }}
     {{ "{{" }} else }}{{ "{{" }}with (printf "unsupported XY: %q" (printf "%c%c" .X .Y)) }}{{ "{{" }} fail . }}{{ "{{" }} end }}
     {{ "{{" }} end }}
