:adhesive_bandage: rename .tool_versions into .tool-versions

--- a/chezmoi/run_onchange_after_asdf_global.sh.tmpl
+++ b/chezmoi/run_onchange_after_asdf_global.sh.tmpl
@@ -1,6 +1,6 @@
 #!/bin/env fish
 {{ template "banner.tmpl" "Fish - Post-install script (asdf)" }}
-# hashlock: {{ include "dot_tool_versions" | sha256sum }}
+# hashlock: {{ include "dot_tool-versions" | sha256sum }}
 
 asdf install asdf-helper latest
 asdf shell asdf-helper latest
