--- a/chezmoi/dot_gitconfig.tmpl
+++ b/chezmoi/dot_gitconfig.tmpl
@@ -18,27 +18,32 @@
 [alias]
   # List available aliases
   aliases = "!git config --get-regexp alias | sed -re 's/alias\\.(\\S*)\\s(.*)$/\\1 = \\2/g'"
+
   # Show default branch
-  main = branch --remotes --list "'*/HEAD'" --format "'%(symref:lstrip=3)'"
+  default = branch --remotes --list "'*/HEAD'" --format "'%(symref:lstrip=3)'"
+
   # Display tree-like log, because default log is a pain…
   lg = log --graph --date=relative --pretty=tformat:'%Cred%h%Creset -%C(auto)%d%Creset %s %Cgreen(%an %ad)%Creset'
+
   # Useful when you have to update your last commit
   # with staged files without editing the commit message.
   oops = commit --amend --no-edit
-  # Ensure that force-pushing won't lose someone else's work (only mine).
-  push-with-lease = push --force-with-lease
-  # Rebase won’t trigger hooks on each "replayed" commit.
-  # This is an ugly hack that will replay each commit during rebase with the
-  # standard `commit` command which will trigger hooks.
-  rebase-with-hooks = rebase -x 'git reset --soft HEAD~1 && git commit -C HEAD@{1}'
+
+  # Yoloooooooooooooo ?
+  yolo = !git add -A && git commit -m \"$(curl --silent --fail https://whatthecommit.com/index.txt)\"
+
   # List local commits that were not pushed to remote repository
   review-local = lg "@{push}.."
+
   # Edit last commit message
   reword = commit --amend
+
   # Set the current branch upstream
   set-upstream = branch --set-upstream-to=origin/`git symbolic-ref --short HEAD`
+
   # Undo last commit but keep changed files in stage
   uncommit = reset --soft HEAD~1
+
   # Remove file(s) from Git but not from disk
   untrack = rm --cache --
 
