:floppy_disk: update dotfiles
- Update chezmoi/.config/starship.toml
- Update chezmoi/.config/private_fish/conf.d/xnli.fish.tmpl

--- a/chezmoi/dot_config/private_fish/conf.d/xnli.fish.tmpl
+++ b/chezmoi/dot_config/private_fish/conf.d/xnli.fish.tmpl
@@ -47,6 +47,10 @@ if command -sq starship
     starship module character
   end
 
+  function starship_transient_rprompt_func
+    starship module time
+  end
+
   starship init fish --print-full-init | source
   enable_transience
 end
