:floppy_disk: update dotfiles
- Update chezmoi/.config/fish/conf.d/wsl.fish.tmpl
- Update chezmoi/.config/fish/conf.d/xnli.fish.tmpl
- Update chezmoi/.gitconfig
- Update chezmoi/.tool-versions

--- a/chezmoi/dot_config/private_fish/conf.d/xnli.fish.tmpl
+++ b/chezmoi/dot_config/private_fish/conf.d/xnli.fish.tmpl
@@ -134,11 +134,17 @@ abbr --add --global gsc git switch --create
 # - grep abbreviations
 alias grep "grep --color=auto --exclude-dir={.bzr,CVS,.git,.hg,.svn}"
 
+# - lazygit abbreviations
+if command -sq lazygit
+  abbr --add --global lg lazygit
+end
+
 # - ls abbreviations
 alias ls "ls --color=auto"
 abbr --add --global ll ls -lh
 abbr --add --global la ls -lah
 
+# - exa abbreviations
 if command -sq exa
   abbr --add --global exa "exa --icons --grid"
 end
