--- a/chezmoi/dot_config/private_fish/conf.d/wsl.fish.tmpl
+++ b/chezmoi/dot_config/private_fish/conf.d/wsl.fish.tmpl
@@ -8,3 +8,6 @@ if test -n "$WT_SESSION" # only enable this feature when we are on Windows Termi
         end
     end
 end
+
+# export GPG_TTY for gpg command
+set --global --export GPG_TTY $(tty)
