--- a/chezmoi/dot_config/private_fish/conf.d/wsl.fish.tmpl
+++ b/chezmoi/dot_config/private_fish/conf.d/wsl.fish.tmpl
@@ -10,4 +10,4 @@ if test -n "$WT_SESSION" # only enable this feature when we are on Windows Termi
 end
 
 # export GPG_TTY for gpg command
-set --global --export GPG_TTY $(tty)
+set --global --export GPG_TTY (tty)
