--- a/chezmoi/dot_config/private_fish/conf.d/xnli.fish.tmpl
+++ b/chezmoi/dot_config/private_fish/conf.d/xnli.fish.tmpl
@@ -6,9 +6,11 @@ fish_add_path $HOME/.local/bin
 
 # --- Keybindings section
 # -----------------------------------------------------------------------------
-fzf_configure_bindings --directory=\cf --git_log=\cg --git_status=\cs   # [Ctrl+F] Find file in directory
-                                                                        # [Ctrl+G] Find file in git history
-                                                                        # [Ctrl+S] Find file in git status
+if command -sq fzf_configure_bindings
+  fzf_configure_bindings --directory=\cf --git_log=\cg --git_status=\cs   # [Ctrl+F] Find file in directory
+                                                                          # [Ctrl+G] Find file in git history
+                                                                          # [Ctrl+S] Find file in git status
+end
 
 # --- Prompt configuration
 # -----------------------------------------------------------------------------
