:sparkles: add rage binary (required by chezmoi)

--- a/chezmoi/dot_config/private_mise/config.toml.tmpl
+++ b/chezmoi/dot_config/private_mise/config.toml.tmpl
@@ -8,13 +8,14 @@ node = "lts"
 python = "latest"
 rust = "latest"
 
+"ubi:cargo-bins/cargo-binstall" = "latest"
+
 "cargo:bat" = "latest"
-"cargo:cargo-binstall" = "latest"
 "cargo:eza" = "latest"
 "cargo:fd-find" = "latest"
 "cargo:git-absorb" = "latest"
 "cargo:git-delta" = "latest"
 "cargo:starship" = "latest"
+"github-cli" = "latest"
 "go:github.com/junegunn/fzf" = "latest"
-
-github-cli = "latest"
+"ubi:str4d/rage" = "latest"
