:bug: install all mise application using ubi if possible

--- a/chezmoi/dot_config/private_mise/config.toml.tmpl
+++ b/chezmoi/dot_config/private_mise/config.toml.tmpl
@@ -9,13 +9,11 @@ python = "latest"
 rust = "latest"
 
 "ubi:cargo-bins/cargo-binstall" = "latest"
-
-"cargo:bat" = "latest"
-"cargo:eza" = "latest"
-"cargo:fd-find" = "latest"
-"cargo:git-absorb" = "latest"
-"cargo:git-delta" = "latest"
-"cargo:starship" = "latest"
-"github-cli" = "latest"
-"go:github.com/junegunn/fzf" = "latest"
+"ubi:cli/cli" = { version = "latest", exe = "gh" }
+"ubi:eza-community/eza" = "latest"
+"ubi:junegunn/fzf" = "latest"
+"ubi:sharkdp/bat" = "latest"
+"ubi:sharkdp/fd" = "latest"
+"ubi:starship/starship" = "latest"
 "ubi:str4d/rage" = "latest"
+"ubi:tummychow/git-absorb" = "latest"
