:sparkles: use difftastic as default diff tool

--- a/chezmoi/.chezmoi.yaml.tmpl
+++ b/chezmoi/.chezmoi.yaml.tmpl
@@ -32,7 +32,11 @@ git:
     {{ "{{" }}- end -}}
 
 diff:
+  {{ if lookPath "difft" -}}
+  command: difft
+  {{- else -}}
   format: git
+  {{- end }}
 
 # --- Template data ---
 data:
