--- a/chezmoi/dot_config/private_mise/config.toml.tmpl
+++ b/chezmoi/dot_config/private_mise/config.toml.tmpl
@@ -17,3 +17,4 @@ rust = "latest"
 "ubi:starship/starship" = "latest"
 "ubi:str4d/rage" = "latest"
 "ubi:tummychow/git-absorb" = "latest"
+"ubi:Wilfred/difftastic" = { version = "latest", exe = "difft" }
