--- a/chezmoi/.chezmoi.yaml.tmpl
+++ b/chezmoi/.chezmoi.yaml.tmpl
@@ -36,7 +36,7 @@ diff:
 
 # --- Template data ---
 data:
-  name: {{ promptString "What is your GIT name" }}
-  email: {{ promptString "What is your GIT email" }}
+  name: {{ promptStringOnce . "name" "What is your GIT name" }}
+  email: {{ promptStringOnce . "email" "What is your GIT email" }}
   bitwarden:
     access_token: {{ promptStringOnce . "bitwarden.access_token" (printf "Get a Bitwarden access token for this machine (%s)" .chezmoi.fqdnHostname) }}
