:bug: fix `keychain_add` abbr
Signed-off-by: Alexandre Nicolaie <alexandre.nicolaie@radiofrance.com>

--- a/chezmoi/dot_config/private_fish/conf.d/keychain.fish.tmpl
+++ b/chezmoi/dot_config/private_fish/conf.d/keychain.fish.tmpl
@@ -6,5 +6,5 @@ if status is-login; and command -sq keychain
     # To remove a key, set -U --erase SSH_KEYS_TO_AUTOLOAD[index_of_key]
     keychain --eval $SSH_KEYS_TO_AUTOLOAD | source
 
-    abbr --add --global keychain_add set --append --univeral SSH_KEYS_TO_AUTOLOAD
+    abbr --add --global keychain_add set --append --universal SSH_KEYS_TO_AUTOLOAD
 end
