:bug: source zoxide on fish config

--- a/chezmoi/dot_config/private_fish/conf.d/xnli.fish.tmpl
+++ b/chezmoi/dot_config/private_fish/conf.d/xnli.fish.tmpl
@@ -80,6 +80,10 @@ if command -sq chezmoi
   chezmoi completion fish | source
 end
 
+# - zoxide
+if command -sq zoxide
+  zoxide init fish | source
+end
 # --- Custom variables/paths
 # -----------------------------------------------------------------------------
 set --global --export EDITOR "nvim"
