:floppy_dsk: update dotfiles
- Update chezmoi/.chezmoi.yaml
- Update chezmoi/.config/mise/config.toml

Signed-off-by: Alexandre NICOLAIE <alexandre.nicolaie@radiofrance.com>

--- a/chezmoi/dot_config/private_mise/config.toml.tmpl
+++ b/chezmoi/dot_config/private_mise/config.toml.tmpl
@@ -8,6 +8,7 @@ node = "lts"
 python = "latest"
 rust = "latest"
 
+kubectl = "latest"
 "ubi:cargo-bins/cargo-binstall" = "latest"
 "ubi:cli/cli" = { version = "latest", exe = "gh" }
 "ubi:eza-community/eza" = "latest"
