--- a/chezmoi/.chezmoi.yaml.tmpl
+++ b/chezmoi/.chezmoi.yaml.tmpl
@@ -9,27 +9,31 @@ git:
   commitMessageTemplate: |
     :floppy_disk: update dotfiles
 
+    {{ "{{" }}- with .chezmoi.status }}
+
     {{ "{{" }} range .Ordinary -}}
-    {{ "{{" }} if and (eq .X 'A') (eq .Y '.') -}}- Add {{ "{{" }} .Path | targetRelPath }}
-    {{ "{{" }} else if and (eq .X 'D') (eq .Y '.') -}}- Remove {{ "{{" }} .Path | targetRelPath }}
-    {{ "{{" }} else if and (eq .X 'M') (eq .Y '.') -}}- Update {{ "{{" }} .Path | targetRelPath }}
-    {{ "{{" }} else }}{{ "{{" }}with (printf "unsupported XY: %q" (printf "%c%c" .X .Y)) }}{{ "{{" }} fail . }}{{ "{{" }} end }}
-    {{ "{{" }} end }}
+    {{ "{{" }} if and (eq .X 'A') (eq .Y '.') -}}- Add {{ .Path | targetRelPath }}
+    {{ "{{" }} else if and (eq .X 'D') (eq .Y '.') -}}- Remove {{ .Path | targetRelPath }}
+    {{ "{{" }} else if and (eq .X 'M') (eq .Y '.') -}}- Update {{ .Path | targetRelPath }}
+    {{ "{{" }} else -}}{{ with (printf "unsupported XY: %q" (printf "%c%c" .X .Y)) }}{{ fail . }}{{ end }}
+    {{ "{{" }}- end }}
     {{ "{{" }}- end -}}
 
     {{ "{{" }} range .RenamedOrCopied -}}
-    {{ "{{" }} if and (eq .X 'R') (eq .Y '.') }}- Change attributes of {{ "{{" }} .Path | targetRelPath }}
-    {{ "{{" }} else }}{{ "{{" }}with (printf "unsupported XY: %q" (printf "%c%c" .X .Y)) }}{{ "{{" }} fail . }}{{ "{{" }} end }}
-    {{ "{{" }} end }}
+    {{ "{{" }} if and (eq .X 'R') (eq .Y '.') -}}- Change attributes of {{ .Path | targetRelPath }}
+    {{ "{{" }} else -}}{{ with (printf "unsupported XY: %q" (printf "%c%c" .X .Y)) }}{{ fail . }}{{ end }}
+    {{ "{{" }}- end }}
     {{ "{{" }}- end -}}
 
-    {{ "{{" }}- range .Unmerged -}}
+    {{ "{{" }} range .Unmerged -}}
     {{ "{{" }} fail "unmerged files" }}
     {{ "{{" }}- end -}}
 
-    {{ "{{" }}- range .Untracked -}}
+    {{ "{{" }} range .Untracked -}}
     {{ "{{" }} fail "untracked files" }}
     {{ "{{" }}- end -}}
+
+    {{ "{{" }}- end }}
 
 diff:
   {{ if lookPath "difft" -}}
