:floppy_disk: update dotfiles
- Update chezmoi/.config/mise/config.toml

--- a/chezmoi/dot_config/private_mise/config.toml.tmpl
+++ b/chezmoi/dot_config/private_mise/config.toml.tmpl
@@ -8,10 +8,10 @@ node = "lts"
 python = "latest"
 rust = "latest"
 
+eza = "latest"
 kubectl = "latest"
 "ubi:cargo-bins/cargo-binstall" = "latest"
 "ubi:cli/cli" = { version = "latest", exe = "gh" }
-"ubi:eza-community/eza" = "latest"
 "ubi:junegunn/fzf" = "latest"
 "ubi:sharkdp/bat" = "latest"
 "ubi:sharkdp/fd" = "latest"
