:floppy_disk: update dotfiles
- Fix shebang issues

--- a/chezmoi/run_onchange_after_fish_plugins.sh.tmpl
+++ b/chezmoi/run_onchange_after_fish_plugins.sh.tmpl
@@ -1,4 +1,4 @@
-#!/bin/env fish
+#!/usr/bin/env fish
 {{ template "banner.tmpl" "Fish - Post-install script (fisher)" -}}
 # hashlock: {{ include "dot_config/private_fish/fish_plugins" | sha256sum }}
 
