--- a/chezmoi/run_onchange_after_mise.sh.tmpl
+++ b/chezmoi/run_onchange_after_mise.sh.tmpl
@@ -1,4 +1,4 @@
-#!/bin/env bash
+#!/usr/bin/env bash
 {{ template "banner.tmpl" "Fish - Post-install/Post-upgrade script (mise)" }}
 # hashlock: {{ include "dot_config/private_mise/config.toml.tmpl" | sha256sum }}
 
