:floppy_disk: update dotfiles
- Update chezmoi/.config/mise/config.toml

--- a/chezmoi/dot_config/private_mise/config.toml.tmpl
+++ b/chezmoi/dot_config/private_mise/config.toml.tmpl
@@ -5,6 +5,7 @@ experimental = true
 [tools]
 eza = "latest"
 kubectl = "latest"
+"npm:czg" = "latest"
 "ubi:cargo-bins/cargo-binstall" = "latest"
 "ubi:cli/cli" = { version = "latest", exe = "gh" }
 "ubi:junegunn/fzf" = "latest"
